# AoC23

./: Cargo.toml  README.md  newday.sh  template.rs  utils.rs
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  utils.rs
