[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Pastel <arthur.pastel@gmail.com>"]


[lints.rust]
soft_unstable = "allow"

[dependencies]
indicatif = "0.17.2"
int-enum = "0.5.0"
itertools = "0.12.0"
num = "0.4.1"
num-bigint = "0.4"
parse-display = "0.8.2"
petgraph = "0.6.2"
rayon = "1.6.1"
regex = "1.7.0"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
indoc = "2"
